<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<groupId>My-Portfolio-Site-API</groupId>
	<artifactId>my-portfolio-site-api</artifactId>
	<modelVersion>4.0.0</modelVersion>
	<version>1.1-SNAPSHOT</version>

	<parent>
		<artifactId>spring-boot-starter-parent</artifactId>
		<groupId>org.springframework.boot</groupId>
		<relativePath/>
		<version>2.5.2</version> <!-- lookup parent from repository -->
	</parent>

	<dependencies>
		<dependency>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>spring-boot-starter-logging</artifactId>
					<groupId>org.springframework.boot</groupId>
				</exclusion>
			</exclusions>
			<groupId>org.springframework.boot</groupId>
			<version>2.1.0.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client</artifactId>
			<version>1.32.1</version>
		</dependency>

		<dependency>
			<artifactId>spring-boot-starter-web</artifactId>
			<groupId>org.springframework.boot</groupId>
			<version>2.1.0.RELEASE</version>
		</dependency>

		<dependency>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<groupId>org.springframework.boot</groupId>
		</dependency>

		<dependency>
			<artifactId>postgresql</artifactId>
			<groupId>org.postgresql</groupId>
		</dependency>

		<dependency>
			<artifactId>spring-boot-starter-test</artifactId>
			<groupId>org.springframework.boot</groupId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<artifactId>validation-api</artifactId>
			<groupId>javax.validation</groupId>
			<version>2.0.1.Final</version>
		</dependency>

		<dependency>
			<artifactId>persistence-api</artifactId>
			<groupId>javax.persistence</groupId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<artifactId>assertj-core</artifactId>
			<groupId>org.assertj</groupId>
		</dependency>

		<dependency>
			<artifactId>mockito-core</artifactId>
			<groupId>org.mockito</groupId>
			<scope>test</scope>
			<version>2.23.0</version>
		</dependency>

		<dependency>
			<artifactId>junit-jupiter-engine</artifactId>
			<groupId>org.junit.jupiter</groupId>
			<scope>test</scope>
			<version>5.6.0</version>
		</dependency>

		<dependency>
			<artifactId>junit-jupiter-api</artifactId>
			<groupId>org.junit.jupiter</groupId>
			<scope>test</scope>
			<version>5.6.0</version>
		</dependency>

		<dependency>
			<artifactId>spring-boot-starter-jdbc</artifactId>
			<groupId>org.springframework.boot</groupId>
		</dependency>

		<dependency>
			<artifactId>log4j-core</artifactId>
			<groupId>org.apache.logging.log4j</groupId>
			<version>2.12.1</version>
		</dependency>

		<dependency>
			<artifactId>log4j-api</artifactId>
			<groupId>org.apache.logging.log4j</groupId>
			<version>2.12.1</version>
		</dependency>

		<dependency>
			<artifactId>commons-lang3</artifactId>
			<groupId>org.apache.commons</groupId>
			<version>3.10</version>
		</dependency>

		<dependency>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<groupId>org.springframework.boot</groupId>
		</dependency>

		<dependency>
			<artifactId>h2</artifactId>
			<groupId>com.h2database</groupId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.9.1</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.2</version>
		</dependency>

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>3.0.0</version>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>2.9.2</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.4.4</version>
				<configuration>
					<mainClass>io.myportfolioproject.api.AppRunner</mainClass>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>16</source>
					<target>16</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>